// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pact between e2e Consumer C and e2e Provider with 30000 ms timeout for Pact getProducts() integration without filters 1`] = `
<body>
  <div>
    <h2>
      Products
    </h2>
    <ul>
      <li>
        <div>
          <img
            src="http://placeimg.com/640/480"
          />
          <h2>
            Sleek Soft Chips
          </h2>
          <p>
            Boston's most advanced compression wear technology increases muscle oxygenation, stabilizes active muscles
          </p>
          <p
            style="font-weight: bold;"
          >
            41.7
          </p>
        </div>
      </li>
      <li>
        <div>
          <img
            src="http://placeimg.com/640/480"
          />
          <h2>
            Licensed Plastic Tuna
          </h2>
          <p>
            The slim & simple Maple Gaming Keyboard from Dev Byte comes with a sleek body and 7- Color RGB LED Back-lighting for smart functionality
          </p>
          <p
            style="font-weight: bold;"
          >
            84.4
          </p>
        </div>
      </li>
      <li>
        <div>
          <img
            src="http://placeimg.com/640/480"
          />
          <h2>
            Tasty Cotton Pants
          </h2>
          <p>
            Boston's most advanced compression wear technology increases muscle oxygenation, stabilizes active muscles
          </p>
          <p
            style="font-weight: bold;"
          >
            99.3
          </p>
        </div>
      </li>
      <li>
        <div>
          <img
            src="http://placeimg.com/640/480"
          />
          <h2>
            Generic Frozen Gloves
          </h2>
          <p>
            The slim & simple Maple Gaming Keyboard from Dev Byte comes with a sleek body and 7- Color RGB LED Back-lighting for smart functionality
          </p>
          <p
            style="font-weight: bold;"
          >
            57.7
          </p>
        </div>
      </li>
      <li>
        <div>
          <img
            src="http://placeimg.com/640/480"
          />
          <h2>
            Small Metal Mouse
          </h2>
          <p>
            New range of formal shirts are designed keeping you in mind. With fits and styling that will make you stand apart
          </p>
          <p
            style="font-weight: bold;"
          >
            95.1
          </p>
        </div>
      </li>
      <li>
        <div>
          <img
            src="http://placeimg.com/640/480"
          />
          <h2>
            Intelligent Wooden Soap
          </h2>
          <p>
            Ergonomic executive chair upholstered in bonded black leather and PVC padded seat and back for all-day comfort and support
          </p>
          <p
            style="font-weight: bold;"
          >
            25.7
          </p>
        </div>
      </li>
      <li>
        <div>
          <img
            src="http://placeimg.com/640/480"
          />
          <h2>
            Awesome Frozen Chair
          </h2>
          <p>
            The Apollotech B340 is an affordable wireless mouse with reliable connectivity, 12 months battery life and modern design
          </p>
          <p
            style="font-weight: bold;"
          >
            4
          </p>
        </div>
      </li>
      <li>
        <div>
          <img
            src="http://placeimg.com/640/480"
          />
          <h2>
            Awesome Granite Gloves
          </h2>
          <p>
            The automobile layout consists of a front-engine design, with transaxle-type transmissions mounted at the rear of the engine and four wheel drive
          </p>
          <p
            style="font-weight: bold;"
          >
            72.6
          </p>
        </div>
      </li>
      <li>
        <div>
          <img
            src="http://placeimg.com/640/480"
          />
          <h2>
            Small Fresh Pizza
          </h2>
          <p>
            The beautiful range of Apple Naturalé that has an exciting mix of natural ingredients. With the Goodness of 100% Natural Ingredients
          </p>
          <p
            style="font-weight: bold;"
          >
            29.3
          </p>
        </div>
      </li>
      <li>
        <div>
          <img
            src="http://placeimg.com/640/480"
          />
          <h2>
            Incredible Soft Bacon
          </h2>
          <p>
            The Apollotech B340 is an affordable wireless mouse with reliable connectivity, 12 months battery life and modern design
          </p>
          <p
            style="font-weight: bold;"
          >
            71.2
          </p>
        </div>
      </li>
    </ul>
  </div>
</body>
`;

exports[`Pact between e2e Consumer C and e2e Provider with 30000 ms timeout for Pact getProducts() with filters 1`] = `
<body>
  <div>
    <h2>
      Products
    </h2>
    <ul>
      <li>
        <div>
          <img
            src="http://placeimg.com/640/480"
          />
          <h2>
            Fantastic Concrete Towels
          </h2>
          <p>
            The beautiful range of Apple Naturalé that has an exciting mix of natural ingredients. With the Goodness of 100% Natural Ingredients
          </p>
          <p
            style="font-weight: bold;"
          >
            90.5
          </p>
        </div>
      </li>
    </ul>
  </div>
</body>
`;
